Fix bug with post-bottom-bar and image-gallery bar (z-index)

--- a/source/_css/modules/_image-gallery.scss
+++ b/source/_css/modules/_image-gallery.scss
@@ -14,7 +14,7 @@
         font-size:     $font-size-small;
         color:         #fff;
         padding:       0.5em 1.5em;
-        z-index: 10;
+        z-index: 1;
     }
     .image-gallery-photos {
 
